--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
             <h1>Veterinários</h1>
             <h2> Amigos dos animais</h2>
-            <p>A medicina veterinária é uma das muitas áreas do conhecimento ligada à manutenção e restauração da saúde. Ela trabalha, num sentido amplo, com a prevenção e cura das doenças das demais espécies e dos humanos num contexto médico. </p>
+            <p>A Medicina veterinária é uma das muitas áreas do conhecimento ligada à manutenção e restauração da saúde. Ela trabalha, num sentido amplo, com a prevenção e cura das doenças das demais espécies e dos humanos num contexto médico. </p>
             <button class="botao2">Explore</button>
 
         </section>
